--- a/src/common/layouts/styles/grid.css
+++ b/src/common/layouts/styles/grid.css
@@ -1,6 +1,6 @@
 .blog-grid {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 100vw;
   grid-template-rows: auto auto;
   grid-template-areas:
     "content"
